src/main/java/com/example/demo/entity/error/UserError.java
package com.example.demo.entity.error;

public enum UserError {
	ID_REQUIRED, LOGIN_REQUIRED, NAME_REQUIRED, SURNAME1_REQUIRED, SURNAME2_REQUIRED, NIF_REQUIRED, NIF_MALFORMED,
	LOGIN_EXISTS, USER_NOT_EXISTS, NO_SECTIONS_ACCESS, USER_CONSTRAINT_VIOLATION;
}
